add support for llm judge
Signed-off-by: Matthew Peveler <mpeveler@timescale.com>

--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -45,6 +45,15 @@ on:
         required: true
         type: boolean
         default: true
+      llm_judge:
+        description: Whether to use LLM to judge results
+        required: true
+        type: choice
+        options:
+          - none
+          - fail
+          - all
+        default: 'none'
       entire_schema:
         description: Whether to use the entire schema for LLM
         required: true
@@ -67,6 +76,10 @@ jobs:
     outputs:
       matrix: ${{ steps.set-matrix.outputs.matrix }}
     steps:
+      - name: Input diagnostic information
+        run: |
+          echo "${{ toJSON(inputs) }}" | jq -r 'to_entries|map("\(.key)=\(.value|tostring)")|.[]'
+
       - uses: actions/checkout@v4
 
       - uses: ./.github/actions/setup-pgai
@@ -97,13 +110,11 @@ jobs:
           if [ -n "${{ inputs.filter }}" ]; then
             filter_args="--filter ${{ inputs.filter }}"
           fi
-          echo "matrix=$(uv run python3 -m suite generate-matrix $filter_args)" >> "$GITHUB_OUTPUT"
+          MATRIX=$(uv run python3 -m suite generate-matrix $filter_args)"
+          echo "${MATRIX}" | jq '.'
+          echo "matrix=${MATRIX}" >> "$GITHUB_OUTPUT"
 
-      - name: Diagnostic information
-        run: |
-          echo "${{ toJSON(inputs) }}" | jq -r 'to_entries|map("\(.key)=\(.value|tostring)")|.[]'
-          echo "matrix="
-          echo '${{ steps.set-matrix.outputs.matrix }}' | jq '.'
+
   run:
     needs: generate_matrix
     runs-on: ubuntu-latest
@@ -178,7 +189,7 @@ jobs:
       - name: Setup dataset ${{ matrix.dataset }} ${{ matrix.database }}
         run: uv run python3 -m suite setup --model ${{ inputs.setup_model }} --dimensions ${{ inputs.setup_dimensions }} --dataset ${{ matrix.dataset }} --database ${{ matrix.database }} ${{ inputs.agent }}
       - name: Run eval
-        run: uv run python3 -m suite eval --dataset ${{ matrix.dataset }} --database ${{ matrix.database }} ${{ inputs.entire_schema && '--entire-schema' || '' }} --model ${{ inputs.eval_model }} ${{ inputs.fast_mode && '--fast' || '' }} ${{ inputs.gold_tables && '--gold-tables' || '' }} ${{ inputs.agent }} ${{ inputs.task }}
+        run: uv run python3 -m suite eval --dataset ${{ matrix.dataset }} --database ${{ matrix.database }} ${{ inputs.entire_schema && '--entire-schema' || '' }} --model ${{ inputs.eval_model }} ${{ inputs.fast_mode && '--fast' || '' }} ${{ inputs.gold_tables && '--gold-tables' || '' }} --llm-judge ${{ inputs.llm_judge }} ${{ inputs.agent }} ${{ inputs.task }}
 
       - run: mv results/results.json results-${{ matrix.dataset }}-${{ matrix.database }}.json
 
