--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@
 __pycache__
 
 datasets/*/evals/*/actual_*
+datasets/*/evals/*/details.json
 datasets/*/evals/*/error.txt
 datasets/postgres_air/databases/*
 !datasets/postgres_air/databases/*.yaml
